# zm-frappe-wix-sync

./: CHANGELOG.md  INSTALL.md  MANIFEST.in  PROJECT_STRUCTURE.md  README.md  pyproject.toml  requirements.txt  setup.py
zm_frappe_wix_sync/: hooks.py  modules.txt  patches.txt
zm_frappe_wix_sync/api/: wix_sync.py
zm_frappe_wix_sync/patches/: __init__.py  fix_sync_log_field_validation.py  migrate_wix_api_key_field.py
zm_frappe_wix_sync/patches/v1_0/: fix_single_doctype_naming.py  fix_wix_sync_settings_naming.py
zm_frappe_wix_sync/public/js/: item_list.js
zm_frappe_wix_sync/zm_frappe_wix_sync/doctype/wix_sync_log/: wix_sync_log.json  wix_sync_log.py
zm_frappe_wix_sync/zm_frappe_wix_sync/doctype/wix_sync_settings/: wix_sync_settings.js  wix_sync_settings.json  wix_sync_settings.py
