[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "zm_frappe_wix_sync"
version = "0.0.1"
description = "A Frappe app to sync ERPNext items with Wix products"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "frappe>=15.0.0",
    "requests>=2.31.0"
]
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/macrobian88/zm-frappe-wix-sync"
Homepage = "https://github.com/macrobian88/zm-frappe-wix-sync"
